# MyHIP-CPU

./: CMakeLists.txt  README.md
gem5_test/: CMakeLists.txt
gem5_test/bc/: BC.cpp  BC.h  CMakeLists.txt  kernel.h
gem5_test/color/: CMakeLists.txt  coloring_max.cpp  coloring_maxmin.cpp  kernel_max.h  kernel_maxmin.h
gem5_test/fw/: CMakeLists.txt  Floyd-Warshall.cpp  kernel.h
gem5_test/graph_parser/: CMakeLists.txt
gem5_test/mis/: CMakeLists.txt  kernel.h  mis.cpp
gem5_test/pagerank/: CMakeLists.txt  kernel.h  kernel_spmv.h  pagerank.cpp  pagerank_spmv.cpp
gem5_test/sssp/: CMakeLists.txt  kernel.h  sssp_csr.cpp  sssp_ell.cpp
runScript/: perfBC_big.txt  perfBC_small.txt  perfFW_big.txt  perfFW_small.txt  perfMIS_big.txt  perfMIS_small.txt  perfPagerank.txt  perfPagerankSpmv.txt  perfSsspCsr_big.txt  perfSsspCsr_small.txt  perfSsspEll_big.txt  perfSsspEll_small.txt  perfrunColorMax_big.txt  perfrunColorMax_small.txt  perfrunColorMinmax_big.txt  perfrunColorMinmax_small.txt  runBC.sh  runBC_big.txt  runBC_small.txt  runColorMax.sh  runColorMax_big.txt  runColorMax_small.txt  runColorMinmax.sh  runFW.sh  runMIS.sh  runPagerank.sh  runPagerankSpmv.sh  runPerf_all.sh  runSsspCsr.sh  runSsspEll.sh
